--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
-    "Dev":"node server.js",
+    "Dev": "node server.js",
     "build": "echo \"Write your build steps here\""
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
